<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/judul_film"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:gravity="center"
            android:text="@string/tagline"
            android:textColor="#CCCCCC"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sutradara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/large_margin"
                android:text="@string/sutradara"
                android:textColor="#CCCCCC" />

            <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/large_margin"
                android:text="@string/tgl_rilis"
                android:textColor="#CCCCCC" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center"
            android:text="@string/sinopsis"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/medium_text" />

        <Button
            android:id="@+id/btn_trailer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:background="#03A9F4"
            android:text="@string/tonton_trailer"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/medium_text" />

    </LinearLayout>
</ScrollView>