<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#03A9F4"
    android:hapticFeedbackEnabled="true"
    app:cardBackgroundColor="#03A9F4"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        android:background="#03A9F4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-smallcaps"
                android:includeFontPadding="false"
                android:shadowColor="#000000"
                android:shadowDy="5.0"
                android:text="@string/judul_film"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tagline"
                android:textColor="#4A4A4A"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:background="#03A9F4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sutradara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sutradara"
                    android:textColor="#4A4A4A" />

                <TextView
                    android:id="@+id/tv_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tgl_rilis"
                    android:textColor="#4A4A4A" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_sinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/sinopsis"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/medium_text" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>